Closed
Bug 1470890
Opened 7 years ago
Closed 7 years ago
MOZ_RELEASE_ASSERT in deserializing object ids in JS IPC under fuzzing
Categories
(Core :: JavaScript Engine, defect)
Core
JavaScript Engine
Tracking
()
RESOLVED
FIXED
mozilla63
People
(Reporter: Alex_Gaynor, Assigned: Alex_Gaynor)
References
(Blocks 1 open bug)
Details
Attachments
(1 file)
+++ This bug was initially created as a clone of Bug #1470181 +++
This is not a security issue, but it is a blocker to the efficiency of fuzzing:
Assertion failure: id.isSome(), at /builds/worker/workspace/build/src/js/ipc/WrapperOwner.cpp:1236
(Full stack not available because reasons)
Comment 1•7 years ago
|
||
This primarily affects the efficiency of fuzzing.
Comment 2•7 years ago
|
||
Comment on attachment 8987493 [details]
Bug 1470890 - handle deserialization failure gracefully in JS IPC; r?evilpie
Tom Schuster [:evilpie] has approved the revision.
https://phabricator.services.mozilla.com/D1797
Attachment #8987493 -
Flags: review+
| Assignee | ||
Updated•7 years ago
|
Keywords: checkin-needed
Pushed by archaeopteryx@coole-files.de:
https://hg.mozilla.org/integration/mozilla-inbound/rev/f4aac816ce53
handle deserialization failure gracefully in JS IPC; r=evilpie
Keywords: checkin-needed
Comment 4•7 years ago
|
||
| bugherder | ||
Status: NEW → RESOLVED
Closed: 7 years ago
status-firefox63:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → mozilla63
Comment 5•7 years ago
|
||
Alex, is that something you intend to uplift to beta or can we let it ride the trains and update the tracking flags accordingly. Thanks
Flags: needinfo?(agaynor)
| Assignee | ||
Comment 6•7 years ago
|
||
I don't believe there's any need to uplift this; my expectation is that this would only ever be hit under the fuzzer.
Flags: needinfo?(agaynor)
Comment 7•7 years ago
|
||
Thank you alex, setting to wontfix for firefox62 then!
You need to log in
before you can comment on or make changes to this bug.
Description
•