Bug 1470890 - handle deserialization failure gracefully in JS IPC; r=evilpie

Summary: This primarily affects the efficiency of fuzzing.

Reviewers: evilpie

Reviewed By: evilpie

Bug #: 1470890

Differential Revision: https://phabricator.services.mozilla.com/D1797